@@ -1,3 +1,6 @@
+2018-05-15  Kirit Saelensminde  <kirit@felspar.com>
+ Add coercions for jcursor index value types.
+
 2018-04-09  Kirit Saelensminde  <kirit@felspar.com>
  Add some basic base16 support.
 
